--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div id="mainbody">
+        <div id="results">
+            <div>
+                <h3></h3>
+                <h3>retry?</h3>
+                <h6 id="retry">🔁</h6>
+            </div>
+        </div>
         <div id="title">
             <h1>Can You Beat Me???🎮</h1>
         </div>
@@ -32,9 +39,10 @@
             <h1>Choose Your Action</h1>
             <div id="action">
                 <div id="rock">👊</div>
-                <div id="Paper">✋</div>
-                <div id="Scissors">✌️</div>
+                <div id="paper">✋</div>
+                <div id="scissors">✌️</div>
             </div>
+            <h6 id="description">Score 10 points first to win</h6>
         </div>
     </div>
     <script src="script.js"></script>
